platform/security/base/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Privileged mode disables most security checks and exposes the host node to 
      compromise. This policy ensures that containers cannot run in privileged mode.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Privileged mode is not allowed. The field spec.containers[*].securityContext.privileged must be set to false."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
