platform/security/base/require-ro-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      A read-only root filesystem helps enforce an immutable infrastructure 
      strategy and reduces the attack surface.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-read-only-root-filesystem
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Root filesystem must be read-only."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
